--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js" integrity="sha512-tWHlutFnuG0C6nQRlpvrEhE4QpkG1nn2MOUMWmUeRePl4e3Aki0VB6W1v3oLjFtd0hVOtRQ9PHpSfN6u6/QXkQ==" crossorigin="www.adobeconnect.com" referrerpolicy="no-referrer"></script>
     </head>
 <body>
-    <input type="text" id="urlInput" placeholder="Please input your URL to download">
-    <button id="downloadButton" onclick="buttonClick();">Download</button>
-    <a href="#" target="_blank"  id="hyperlink">MP4 Link</a>
-    
+
+    <div>
+        <ul id="instructions">
+            <h1>How to download the archive.</h1>
+            <li>1. Open an archive and copy the URL at the top of the page.</li>
+            <li>2. Paste the link in the text box and click download.</li>
+            <li>3. Then click the three dots and click download</li>
+        </ul>
+        <div id="downloadMenu">
+            <input type="text" id="urlInput" placeholder="Please input your URL to download">
+            <button id="downloadButton" onclick="buttonClick();">Download</button>
+            <a href="#" target="_blank"  id="hyperlink">MP4 Link</a>
+        </div>
+        
+        <p>
+        <p></p>
+        <p></p>
+    </div> 
 </body>
 </html>
