Webp update index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Archive Downloader</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="favicon.png">
+        <link rel="shortcut icon" href="favicon.webp">
         <link rel="stylesheet" href="style.css">
     </head>
     <script src="script.js" defer></script> 
@@ -18,9 +18,9 @@
                 <ol>
                     <h1>How to download the archive</h1>
                     <li>Open an archive and copy the link at the top of the page.</li>
-                    <img src="Copy the Archive Url.png" alt="Location of link.">
+                    <img src="Copy the Archive Url.webp" alt="Location of link.">
                     <li>Paste the link in the text box to the right.</li>
-                    <img src="Mp4 download area.png" alt="Location of download button.">
+                    <img src="Mp4 download area.webp" alt="Location of download button.">
                     <li>Press the three dots and click download.</li>
                 </ol>        
             </div>
