--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <ol>
                     <h1>How to download the archive</h1>
                     <li>Open an archive and copy the link at the top of the page.</li>
-                    <img src="Copy the Archive Url.webp" alt="Location of link.">
+                    <img src="Copy-the-archive-url.webp" alt="Location of link.">
                     <li>Paste the link in the text box to the right.</li>
-                    <img src="Mp4 download area.webp" alt="Location of download button.">
+                    <img src="mp4-download-area.webp" alt="Location of download button.">
                     <li>Press the three dots and click download.</li>
                 </ol>        
             </div>
