--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ol>
                     <h1>How to download the archive</h1>
                     <li>Open an archive and copy the link at the top of the page.</li>
-                    <img src="Copy-the-archive-url.webp" alt="Location of link.">
+                    <img src="copy-the-archive-url.webp" alt="Location of link.">
                     <li>Paste the link in the text box to the right.</li>
                     <img src="mp4-download-area.webp" alt="Location of download button.">
                     <li>Press the three dots and click download.</li>
